--- a/examples/index.html
+++ b/examples/index.html
@@ -150,6 +150,7 @@
       <li><a href="showcase/shopping/">Shopping</a></li>
       <li><a href="showcase/spheres-and-fog/">Spheres and Fog</a></li>
       <li><a href="showcase/wikipedia/">Wikipedia</a></li>
+      <li><a href="showcase/controller-specific-anchors">Controller-specific anchors</a></li>
       <li><a href="boilerplate/hello-world/">Hello World</a></li>
       <li><a href="boilerplate/ar-hello-world/">AR Hello World</a></li>
       <li><a href="boilerplate/panorama/">360&deg; Image</a></li>
